@@ -8,6 +8,7 @@ April 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
  * libpcsxcore/psxmem.c: Minor cleanup (thanks Sebun).
  * libpcsxcore/spu.c: Likewise.
  * gui/Cheat.c: Likewise.
+ * libpcsxcore/cdrom.c: Check case open/close in CdlStop (courtesy of shalma).
  * po/zh_CN.po, po/zh_TW.po, po/it.po, po/pt_BR.po, po/pcsx.pot: Updated.
 
 March 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
